Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80084

qtbase\src\gui\rhi\qrhid3d11.cpp(3925): error C2065: 'DXGI_SWAP_EFFECT_FLIP_DISCARD': undeclared identifier

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.14
    • 5.15
    • Qt RHI
    • None
    • Windows
    • 5142fe2c54970040fb6967848156a5f28b5a2dc9

      getting qtbase\src\gui\rhi\qrhid3d11.cpp(3925): error C2065: 'DXGI_SWAP_EFFECT_FLIP_DISCARD': undeclared identifier when building on windows 7, Visual Studio 2015 with update 3 (last).

      Is there any workaround to disable DX?
      And if not, why not? I suppose it would be still desirable to avoid linking D3D if opengl is anyway going to be used

      For the moment the workaround was to comment away that line, since D3D is not going to be used anyway.
      Please make this part of RHI optional in configure.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            paangele Paolo Angelelli
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes